# simpple

./: .gitignore  README.md  pyproject.toml  save_line.yaml  save_line_poly.yaml
.github/workflows/: test_and_lint.yml
docs/: conf.py  index.md  installation.md
docs/api/: index.md  load.md  model.md  utils.md
docs/tutorials/: configuring-models-with-yaml.md  fitting-a-line.ipynb  fixed-parameters.ipynb  getting-started.ipynb  index.md  writing-model-classes.ipynb  yaml.ipynb
docs/tutorials/examples/: getting_started_yaml.py  line.yaml  line_poly.yaml  simpple_polynomial.py
src/simpple/: __init__.py  distributions.py  load.py  model.py  plot.py  utils.py
tests/: custom_models.py  test_distributions.py  test_load.py  test_model.py  test_simpple.py  test_utils.py
tests/data/: custom_normal2d.yaml  custom_poly.yaml  line.yaml  line_noargs.yaml  line_params.yaml  line_params_machine.yaml  normal2d.yaml  normal2d_likelihood.yaml
