[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simpple"
authors = [
  { name="Thomas Vandal", email="thomas.vandal@umontreal.ca" },
]
description = "Simple probabilistic programming language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "nautilus-sampler",
]

[tool.hatch.version]
source = "vcs"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-parser",
  "myst-nb",
  "sphinx-book-theme",
  "corner",
  "arviz",
  "zeus-mcmc",
  "emcee",
  "tqdm",
  "ultranest",
]
test = ["pytest"]

[tool.hatch.build.hooks.vcs]
version-file = "src/simpple/_version.py"

[project.urls]
"Homepage" = "https://simpple.readthedocs.io"
"Repository" = "https://github.com/vandalt/simpple"
"Bug Tracker" = "https://github.com/vandalt/simpple/issues"
